--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "presensi_universitas_narotama",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/main.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon src/main.js",
