--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "serverless-http": "^3.2.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
