--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
 {
   "version": 2,
   "builds": [{ "src": "./src/main.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/src/main.js" }]
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/src/main.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
+    }
+  ]
 }
