--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ SERVER_PORT=your-port
 
 # JWT
 JWT_SECRET='your-jwt-secret'
+JWT_REFRESH_SECRET='your-jwt-refresh-secret'
+
+#
+NODE_ENV='development/production'
