--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,14 @@
 # DB URI
 DATABASE_URL='connect databases postgress'
 
-# Port
+# PORT
 SERVER_PORT=your-port
 
 # JWT
 JWT_SECRET='your-jwt-secret'
+JWT_EXPIRATION='your-jwt-expiration'
 JWT_REFRESH_SECRET='your-jwt-refresh-secret'
+JWT_REFRESH_EXPIRATION='your-jwt-refresh-expiration'
 
 #
 NODE_ENV='development/production'
