--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "./src/main.js",
   "type": "module",
   "scripts": {
+    "start": "node src/main.js",
     "dev": "nodemon src/main.js",
     "postinstall": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
