[FIX] fix bug server error when login account

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 # DB URI
-DATABASE_URL='connect databases postgress'
+DATABASE_URL='connect-database-postgress'
 
 # PORT
 PORT=your-port
 
 # JWT
 JWT_SECRET='your-jwt-secret'
-JWT_EXPIRATION='your-jwt-expiration'
+JWT_EXPIRES_IN='your-jwt-expiration'
 JWT_REFRESH_SECRET='your-jwt-refresh-secret'
-JWT_REFRESH_EXPIRATION='your-jwt-refresh-expiration'
+JWT_REFRESH_EXPIRES_IN='your-jwt-refresh-expiration'
 
 #
 NODE_ENV='development/production'
